fix: overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -257,14 +257,12 @@ h1, h2, h3, h4, p {
     transform: translate(-50%, -50%);
     max-width: 95vw;
     max-height: 95vh;
-    height: 600px;
     border-radius: 10px;
     overflow: hidden;
 }
 
 .modal .modalContainer .sub {
     background-color: #313131;
-    overflow: auto;
 }
 
 .modal .modalContainer .xButton {
